[package]
name = "network-scanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scanner"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
colored = "2.1"
native-tls = "0.2"
x509-parser = "0.15"
dns-lookup = "2"

[profile.release]
opt-level = 3
lto = true
